--- a/converterpagecss.css
+++ b/converterpagecss.css
@@ -10,31 +10,25 @@ a {
     color: lightblue;
 }
 .center {
-    width: 35%;
+    width: 45%;
     margin: 0 auto;
     text-align: center;
 }
 .options {
-    float: left;
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 .textInput, .checkboxInput {
-    display: inline-block;
-    float: left;
     width: 40px;
+    height: 16px;
     text-align: center;
 }
 .tooltipWrapper {
-    display: inline-block;
-    float: left;
-    clear: left;
-    width: 50%;
-    text-align: right;
+    justify-self: right;
     border-bottom: 10px solid transparent;
-    border-right: 5px solid transparent
+    border-right: 5px solid transparent;
 }
 .tooltip {
-    display: inline-block;
     position: relative;
     border-bottom: 1px dotted white;
 }
